fixing main button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <img src="https://image.ibb.co/jesv9v/nikola_badge.png" alt="nikola tesla name on a badge">
                 </h1>
                 <div id="l-head-btns" class="container-fluid">
-                    <a class="l-headBtn" href="#l-header">Main</a>
+                    <a class="l-headBtn" href="#l-head">Main</a>
                     <a class="l-headBtn" href="#l-inv">Inventions</a>
                     <a class="l-headBtn" href="#l-bio">Biography</a>
                     <a class="l-headBtn" href="#l-img">Images</a>
